Fix: card name part show '...' when too long

--- a/src/components/ListPage/Card.module.css
+++ b/src/components/ListPage/Card.module.css
@@ -11,10 +11,13 @@
 }
 
 .name {
+  overflow: hidden;
   margin-bottom: 2rem;
   font-size: 2rem;
   font-weight: 700;
   line-height: 3rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .backgroundImage {
